[gd_scene load_steps=7 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://swords/katana.png" type="Texture" id=2]
[ext_resource path="res://swords/flamberge.png" type="Texture" id=3]
[ext_resource path="res://swords/shamshir.png" type="Texture" id=4]
[ext_resource path="res://swords/rapier.png" type="Texture" id=5]
[ext_resource path="res://swords/tulwar.png" type="Texture" id=6]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="SinglePlayerButton" type="Button" parent="."]
margin_left = 543.867
margin_top = 276.692
margin_right = 759.867
margin_bottom = 325.692
text = "Dojo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MultiPlayerButton" type="Button" parent="."]
margin_left = 780.867
margin_top = 276.692
margin_right = 996.867
margin_bottom = 325.692
text = "Multiplayer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="CheckButton" parent="."]
margin_left = 780.867
margin_top = 202.0
margin_right = 996.867
margin_bottom = 242.0
text = "Sword same as mine"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameTextBox" type="LineEdit" parent="."]
margin_left = 543.867
margin_top = 202.0
margin_right = 759.867
margin_bottom = 239.0
text = "DefaultName"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="."]
visible = false
margin_left = 108.679
margin_top = 260.0
margin_right = 388.679
margin_bottom = 375.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Katana" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
tab_align = 0
tab_close_display_policy = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/Katana"]
margin_right = 280.0
margin_bottom = 56.0
text = "A katana is a Japanese sword characterized by a curved, single-edged blade with a circular or squared guard and long grip to accommodate two hands."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Broadsword" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
tab_align = 0
tab_close_display_policy = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/Broadsword"]
margin_right = 264.0
margin_bottom = 79.0
text = "Broadsword or basket-hilted sword is an early modern military sword."

[node name="OptionButton" type="OptionButton" parent="."]
visible = false
margin_left = 221.0
margin_top = 260.0
margin_right = 528.0
margin_bottom = 297.0
text = "Katana"
icon = ExtResource( 2 )
items = [ "Katana", ExtResource( 2 ), false, 0, null, "Broadsword", null, false, 1, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_top = 27.7064
margin_right = 103.0
margin_bottom = 41.7064
rect_scale = Vector2( 10, 10 )
text = "SwordsMasters"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weaponry" type="ItemList" parent="."]
margin_left = 71.0
margin_top = 198.0
margin_right = 517.0
margin_bottom = 559.0
items = [ "Katana", ExtResource( 2 ), false, "Rapier", ExtResource( 5 ), false, "Shamshir", ExtResource( 4 ), false, "Flamberge", ExtResource( 3 ), false, "Tulwar", ExtResource( 6 ), false ]
allow_reselect = true
max_columns = 2
same_column_width = true
fixed_icon_size = Vector2( 100, 100 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SwordDescription" type="TextEdit" parent="."]
margin_left = 544.0
margin_top = 348.0
margin_right = 997.0
margin_bottom = 559.0
readonly = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="SinglePlayerButton" to="." method="_on_SinglePlayerButton_pressed"]
[connection signal="pressed" from="MultiPlayerButton" to="." method="_on_MultiPlayerButton_pressed"]
[connection signal="toggled" from="CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="text_changed" from="NameTextBox" to="." method="_on_NameTextBox_text_changed"]
[connection signal="item_focused" from="OptionButton" to="." method="_on_OptionButton_item_focused"]
[connection signal="item_selected" from="OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="item_selected" from="Weaponry" to="." method="_on_ItemList_item_selected"]
